added eind speed and humidity to main card

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <h4 class="mainDate"></h4>
         <p class="desc"></p>
         <p class="temp"></p>
+        <p class="mainWind"></p>
+        <p class="mainHumidity"></p>
       </div>
 
     <!-- display the 5 day forecast -->
