--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
+    <header class="header">
+      <h1>Your Weather Darshboard Inc.</h1>
+    </header>
     <body>
       <div class="input">
         <input type="text" class="inputValue" placeholder="Enter a city">
