added comments to html code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
+    <!-- added a header section to name the app-->
     <header class="header">
+      <!-- updated to a unique title-->
       <h1>Your Weather Darshboard Inc.</h1>
     </header>
     <body>
@@ -29,6 +31,7 @@
       </div>
 
     <!-- display the 5 day forecast -->
+ <!-- changed divs to semantic sections to target them all in styling-->
     <div class="fivedays">
       <section class="day1">
         <img class="day1icon"></img>
