added css comments

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div id="displayHistory"></div>
 
-
+<!-- link to moment.js for live dates-->
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
         <script src="assets/script/script.js" async defer></script>
     </body>
